--- a/index.html
+++ b/index.html
@@ -7,8 +7,33 @@
   <title>Star Trek Trivia</title>
   <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 </head>
 <body>
+  <nav class="nav navbar-default">
+    <div class="container-fluid">
+      <div class="header">
+        <h1 class="navbar-brand">Star Trek Trivia</h1>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+      <div id="start-screen" class="row">
+        <div class="jumbotron">
+          <h1>Star Trek Trivia!</h1>
+          <p>You will have 30 seconds per question. If you run out of time before you answer, it counts as a wrong answer.</p>
+          <button id="start" class="btn btn-info btn-lg">Start!</button>  
+        </div>
+      </div>
+      <div id="gameboard" class="row">
+        <div class="col-lg-4 col-lg-offset-4">
+          <h1 class="">Star Trek Trivia</h1>
+        </div>
+      </div>
+  </div>
 
   <script src="./assets/javascript/app.js"></script>
 </body>
