--- a/index.html
+++ b/index.html
@@ -29,8 +29,22 @@
         </div>
       </div>
       <div id="gameboard" class="row">
-        <div class="col-lg-4 col-lg-offset-4">
-          <h1 class="">Star Trek Trivia</h1>
+        <div class="row">
+          <div class="col-lg-4 col-lg-offset-4">
+            <h1 class="">Star Trek Trivia</h1>
+          </div>      
+        </div>
+        <div class="row">
+          <h2 id="timer" class="col-lg-4 col-lg-offset-4"></h2>
+        </div>
+        <div class="row">
+          <section id="question" class="col-lg-8 col-lg-offset-2"></section>
+          <section id="answers" class="col-lg-8 col-lg-offset-2">
+            <span id="answer-a"></span>
+            <span id="answer-b"></span>
+            <span id="answer-c"></span>
+            <span id="answer-d"></span>            
+          </section>
         </div>
       </div>
   </div>
