I can now display a question and its answers

--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
         <div class="row">
           <section id="question" class="col-lg-8 col-lg-offset-2"></section>
           <section id="answers" class="col-lg-8 col-lg-offset-2">
-            <span id="answer-a"></span>
-            <span id="answer-b"></span>
-            <span id="answer-c"></span>
-            <span id="answer-d"></span>            
+            <ol>
+              <li id="answer-a"></li>
+              <li id="answer-b"></li>
+              <li id="answer-c"></li>
+              <li id="answer-d"></li>
+            </ol>
           </section>
         </div>
       </div>
