button choices don't work yet

--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
         <div class="row">
           <section id="question" class="col-lg-8 col-lg-offset-2"></section>
           <section id="answers" class="col-lg-8 col-lg-offset-2">
-            <ol>
-              <li id="answer-a"></li>
-              <li id="answer-b"></li>
-              <li id="answer-c"></li>
-              <li id="answer-d"></li>
-            </ol>
+            <div id="answer-a"></div>
+            <div id="answer-b"></div>
+            <div id="answer-c"></div>
+            <div id="answer-d"></div>
           </section>
         </div>
       </div>
