--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Star Trek Trivia</title>
   <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Rambla:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rambla|Saira+Extra+Condensed:300" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
   <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
