--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
   <div class="container">
     <div class="row">
       <img id="logo" class="img-responsive center-block" src="./assets/images/logo.svg.png" alt="Star Trek: The Next Generation" />
-      <h1 class="text-center">The Trivia Game</h1>
+      <h1 class="text-center col-lg-4 col-lg-offset-4">The Trivia Game</h1>
     </div>
     <div id="start-screen" class="row">
       <div class="jumbotron">
         <p>You will have 30 seconds per question. If you run out of time before you answer, it counts as a wrong answer.</p>
-        <button id="start" class="btn btn-info btn-lg">Start!</button>  
+        <button id="start" class="btn btn-lg">Start!</button>  
       </div>
     </div>
     <div id="gameboard" class="row">
       <div class="row">
-        <h2 id="timer" class="text-center">00:30</h2>
+        <h2 id="timer" class="text-center col-lg-4 col-lg-offset-4">00:30</h2>
       </div>
       <div class="row">
         <section id="question" class="col-lg-8 col-lg-offset-2"></section>
