--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
       </div>
     </div>
     <div id="gameboard" class="row">
-      <div class="row">
-        <h2 id="timer" class="text-center col-lg-4 col-lg-offset-4">00:30</h2>
-      </div>
-      <div class="row">
+      <div class="col-lg-8">
         <section id="question" class="col-lg-8 col-lg-offset-2"></section>
         <section id="answers" class="col-lg-8 col-lg-offset-2">
           <div id="answer-a"></div>
@@ -37,6 +34,9 @@
           <div id="answer-c"></div>
           <div id="answer-d"></div>
         </section>
+      </div>
+      <div class="col-lg-4">
+          <h2 id="timer" class="text-center">00:30</h2>
       </div>
     </div>
   </div>
