--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </div>
     <div id="gameboard" class="row">
       <div class="col-lg-8">
-        <section id="question" class="col-lg-8 col-lg-offset-2"></section>
-        <section id="answers" class="col-lg-8 col-lg-offset-2">
+        <section id="question" class="row text-center"></section>
+        <section id="answers" class="row text-center">
           <div id="answer-a"></div>
           <div id="answer-b"></div>
           <div id="answer-c"></div>
@@ -36,7 +36,8 @@
         </section>
       </div>
       <div class="col-lg-4">
-          <h2 id="timer" class="text-center">00:30</h2>
+          <h2 id="timer" class="row text-center">00:30</h2>
+          <div id="feedback" class="center-block"></div>
       </div>
     </div>
   </div>
