--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row">
       <img id="logo" class="img-responsive center-block" src="./assets/images/logo.svg.png" alt="Star Trek: The Next Generation" />
-      <h1 class="text-center col-lg-4 col-lg-offset-4">The Trivia Game</h1>
+      <h1 class="text-center col-md-4 col-md-offset-4">The Trivia Game</h1>
     </div>
     <div id="start-screen" class="row">
       <div class="jumbotron">
@@ -26,7 +26,11 @@
       </div>
     </div>
     <div id="gameboard" class="row">
-      <div class="col-lg-8">
+      <div class="col-md-4 col-md-push-8">
+          <h2 id="timer" class="row text-center">00:30</h2>
+          <div id="feedback" class="center-block"></div>
+      </div>
+      <div class="col-md-8 col-md-pull-4">
         <section id="question" class="row text-center"></section>
         <section id="answers" class="row text-center">
           <div id="answer-a"></div>
@@ -34,10 +38,6 @@
           <div id="answer-c"></div>
           <div id="answer-d"></div>
         </section>
-      </div>
-      <div class="col-lg-4">
-          <h2 id="timer" class="row text-center">00:30</h2>
-          <div id="feedback" class="center-block"></div>
       </div>
     </div>
   </div>
